SimpleCCompiler/lex+yacc/y.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: ExtDec
    8           | ExtDec COMMA ExtDecList

    9 ExtDec: VarDec
   10       | VarDec ASSIGNOP Exp

   11 Specifier: INT
   12          | DOUBLE
   13          | CHAR

   14 VarDec: ID
   15       | VarDec LB INTEGER RB

   16 FunDec: ID LP VarList RP
   17       | ID LP RP

   18 VarList: ParamDec COMMA VarList
   19        | ParamDec

   20 ParamDec: Specifier VarDec

   21 CompSt: LC DefList StmtList RC

   22 StmtList: Stmt StmtList
   23         | /* empty */

   24 Stmt: Exp SEMI
   25     | CompSt
   26     | RETURN Exp SEMI
   27     | RETURN SEMI
   28     | IF LP Exp RP Stmt
   29     | IF LP Exp RP Stmt ELSE Stmt
   30     | WHILE LP Exp RP Stmt

   31 DefList: Def DefList
   32        | /* empty */

   33 Def: Specifier DecList SEMI

   34 DecList: Dec
   35        | Dec COMMA DecList

   36 Dec: VarDec
   37    | VarDec ASSIGNOP Exp

   38 Exp: Exp ASSIGNOP Exp
   39    | Exp AND Exp
   40    | Exp OR Exp
   41    | Exp EQ Exp
   42    | Exp GE Exp
   43    | Exp LE Exp
   44    | Exp GT Exp
   45    | Exp LT Exp
   46    | Exp NE Exp
   47    | Exp PLUS Exp
   48    | Exp MINUS Exp
   49    | Exp STAR Exp
   50    | Exp DIV Exp
   51    | Exp MOD Exp
   52    | Exp BAND Exp
   53    | Exp BOR Exp
   54    | Exp BNOR Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | BAND Exp
   59    | STAR Exp
   60    | ID LP Args RP
   61    | ID LP RP
   62    | Exp LB Exp RB
   63    | ID
   64    | INTEGER
   65    | REAL
   66    | STRING

   67 Args: Exp COMMA Args
   68     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256)
INTEGER (258) 15 64
REAL (259) 65
STRING (260) 66
ID (261) 14 16 17 60 61 63
SEMI (262) 4 5 24 26 27 33
COMMA (263) 8 18 35 67
ASSIGNOP (264) 10 37 38
EQ (265) 41
GE (266) 42
LE (267) 43
GT (268) 44
LT (269) 45
NE (270) 46
PLUS (271) 47
MINUS (272) 48 56
STAR (273) 49 59
DIV (274) 50
BAND (275) 52 58
AND (276) 39
OR (277) 40
NOT (278) 57
INT (279) 11
DOUBLE (280) 12
CHAR (281) 13
LP (282) 16 17 28 29 30 55 60 61
RP (283) 16 17 28 29 30 55 60 61
LB (284) 15 62
RB (285) 15 62
LC (286) 21
RC (287) 21
RETURN (288) 26 27
IF (289) 28 29
ELSE (290) 29
WHILE (291) 30
BOR (292) 53
BNOR (293) 54
MOD (294) 51
UBAND (295)
USTAR (296)
UMINUS (297)
LOWER_THAN_ELSE (298)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
Program (45)
    on left: 1, on right: 0
ExtDefList (46)
    on left: 2 3, on right: 1 2
ExtDef (47)
    on left: 4 5 6, on right: 2
ExtDecList (48)
    on left: 7 8, on right: 4 8
ExtDec (49)
    on left: 9 10, on right: 7 8
Specifier (50)
    on left: 11 12 13, on right: 4 5 6 20 33
VarDec (51)
    on left: 14 15, on right: 9 10 15 20 36 37
FunDec (52)
    on left: 16 17, on right: 6
VarList (53)
    on left: 18 19, on right: 16 18
ParamDec (54)
    on left: 20, on right: 18 19
CompSt (55)
    on left: 21, on right: 6 25
StmtList (56)
    on left: 22 23, on right: 21 22
Stmt (57)
    on left: 24 25 26 27 28 29 30, on right: 22 28 29 30
DefList (58)
    on left: 31 32, on right: 21 31
Def (59)
    on left: 33, on right: 31
DecList (60)
    on left: 34 35, on right: 33 35
Dec (61)
    on left: 36 37, on right: 34 35
Exp (62)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
    56 57 58 59 60 61 62 63 64 65 66, on right: 10 24 26 28 29 30 37
    38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
    59 62 67 68
Args (63)
    on left: 67 68, on right: 60 67


state 0

    0 $accept: . Program $end

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    CHAR    shift, and go to state 3

    $default  reduce using rule 3 (ExtDefList)

    Program     go to state 4
    ExtDefList  go to state 5
    ExtDef      go to state 6
    Specifier   go to state 7


state 1

   11 Specifier: INT .

    $default  reduce using rule 11 (Specifier)


state 2

   12 Specifier: DOUBLE .

    $default  reduce using rule 12 (Specifier)


state 3

   13 Specifier: CHAR .

    $default  reduce using rule 13 (Specifier)


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 8


state 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 6

    2 ExtDefList: ExtDef . ExtDefList

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    CHAR    shift, and go to state 3

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 6
    Specifier   go to state 7


state 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 10
    SEMI  shift, and go to state 11

    ExtDecList  go to state 12
    ExtDec      go to state 13
    VarDec      go to state 14
    FunDec      go to state 15


state 8

    0 $accept: Program $end .

    $default  accept


state 9

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 10

   14 VarDec: ID .
   16 FunDec: ID . LP VarList RP
   17       | ID . LP RP

    LP  shift, and go to state 16

    $default  reduce using rule 14 (VarDec)


state 11

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 12

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 17


state 13

    7 ExtDecList: ExtDec .
    8           | ExtDec . COMMA ExtDecList

    COMMA  shift, and go to state 18

    $default  reduce using rule 7 (ExtDecList)


state 14

    9 ExtDec: VarDec .
   10       | VarDec . ASSIGNOP Exp
   15 VarDec: VarDec . LB INTEGER RB

    ASSIGNOP  shift, and go to state 19
    LB        shift, and go to state 20

    $default  reduce using rule 9 (ExtDec)


state 15

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 21

    CompSt  go to state 22


state 16

   16 FunDec: ID LP . VarList RP
   17       | ID LP . RP

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    CHAR    shift, and go to state 3
    RP      shift, and go to state 23

    Specifier  go to state 24
    VarList    go to state 25
    ParamDec   go to state 26


state 17

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 18

    8 ExtDecList: ExtDec COMMA . ExtDecList

    ID  shift, and go to state 27

    ExtDecList  go to state 28
    ExtDec      go to state 13
    VarDec      go to state 14


state 19

   10 ExtDec: VarDec ASSIGNOP . Exp

    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    ID       shift, and go to state 32
    MINUS    shift, and go to state 33
    STAR     shift, and go to state 34
    BAND     shift, and go to state 35
    NOT      shift, and go to state 36
    LP       shift, and go to state 37

    Exp  go to state 38


state 20

   15 VarDec: VarDec LB . INTEGER RB

    INTEGER  shift, and go to state 39


state 21

   21 CompSt: LC . DefList StmtList RC

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    CHAR    shift, and go to state 3

    $default  reduce using rule 32 (DefList)

    Specifier  go to state 40
    DefList    go to state 41
    Def        go to state 42


state 22

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 23

   17 FunDec: ID LP RP .

    $default  reduce using rule 17 (FunDec)


state 24

   20 ParamDec: Specifier . VarDec

    ID  shift, and go to state 27

    VarDec  go to state 43


state 25

   16 FunDec: ID LP VarList . RP

    RP  shift, and go to state 44


state 26

   18 VarList: ParamDec . COMMA VarList
   19        | ParamDec .

    COMMA  shift, and go to state 45

    $default  reduce using rule 19 (VarList)


state 27

   14 VarDec: ID .

    $default  reduce using rule 14 (VarDec)


state 28

    8 ExtDecList: ExtDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


state 29

   64 Exp: INTEGER .

    $default  reduce using rule 64 (Exp)


state 30

   65 Exp: REAL .

    $default  reduce using rule 65 (Exp)


state 31

   66 Exp: STRING .

    $default  reduce using rule 66 (Exp)


state 32

   60 Exp: ID . LP Args RP
   61    | ID . LP RP
   63    | ID .

    LP  shift, and go to state 46

    $default  reduce using rule 63 (Exp)


state 33

   56 Exp: MINUS . Exp

    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    ID       shift, and go to state 32
    MINUS    shift, and go to state 33
    STAR     shift, and go to state 34
    BAND     shift, and go to state 35
    NOT      shift, and go to state 36
    LP       shift, and go to state 37

    Exp  go to state 47


state 34

   59 Exp: STAR . Exp

    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    ID       shift, and go to state 32
    MINUS    shift, and go to state 33
    STAR     shift, and go to state 34
    BAND     shift, and go to state 35
    NOT      shift, and go to state 36
    LP       shift, and go to state 37

    Exp  go to state 48


state 35

   58 Exp: BAND . Exp

    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    ID       shift, and go to state 32
    MINUS    shift, and go to state 33
    STAR     shift, and go to state 34
    BAND     shift, and go to state 35
    NOT      shift, and go to state 36
    LP       shift, and go to state 37

    Exp  go to state 49


state 36

   57 Exp: NOT . Exp

    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    ID       shift, and go to state 32
    MINUS    shift, and go to state 33
    STAR     shift, and go to state 34
    BAND     shift, and go to state 35
    NOT      shift, and go to state 36
    LP       shift, and go to state 37

    Exp  go to state 50


state 37

   55 Exp: LP . Exp RP

    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    ID       shift, and go to state 32
    MINUS    shift, and go to state 33
    STAR     shift, and go to state 34
    BAND     shift, and go to state 35
    NOT      shift, and go to state 36
    LP       shift, and go to state 37

    Exp  go to state 51


state 38

   10 ExtDec: VarDec ASSIGNOP Exp .
   38 Exp: Exp . ASSIGNOP Exp
   39    | Exp . AND Exp
   40    | Exp . OR Exp
   41    | Exp . EQ Exp
   42    | Exp . GE Exp
   43    | Exp . LE Exp
   44    | Exp . GT Exp
   45    | Exp . LT Exp
   46    | Exp . NE Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   51    | Exp . MOD Exp
   52    | Exp . BAND Exp
   53    | Exp . BOR Exp
   54    | Exp . BNOR Exp
   62    | Exp . LB Exp RB

    ASSIGNOP  shift, and go to state 52
    EQ        shift, and go to state 53
    GE        shift, and go to state 54
    LE        shift, and go to state 55
    GT        shift, and go to state 56
    LT        shift, and go to state 57
    NE        shift, and go to state 58
    PLUS      shift, and go to state 59
    MINUS     shift, and go to state 60
    STAR      shift, and go to state 61
    DIV       shift, and go to state 62
    BAND      shift, and go to state 63
    AND       shift, and go to state 64
    OR        shift, and go to state 65
    LB        shift, and go to state 66
    BOR       shift, and go to state 67
    BNOR      shift, and go to state 68
    MOD       shift, and go to state 69

    $default  reduce using rule 10 (ExtDec)


state 39

   15 VarDec: VarDec LB INTEGER . RB

    RB  shift, and go to state 70


state 40

   33 Def: Specifier . DecList SEMI

    ID  shift, and go to state 27

    VarDec   go to state 71
    DecList  go to state 72
    Dec      go to state 73


state 41

   21 CompSt: LC DefList . StmtList RC

    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    ID       shift, and go to state 32
    MINUS    shift, and go to state 33
    STAR     shift, and go to state 34
    BAND     shift, and go to state 35
    NOT      shift, and go to state 36
    LP       shift, and go to state 37
    LC       shift, and go to state 21
    RETURN   shift, and go to state 74
    IF       shift, and go to state 75
    WHILE    shift, and go to state 76

    $default  reduce using rule 23 (StmtList)

    CompSt    go to state 77
    StmtList  go to state 78
    Stmt      go to state 79
    Exp       go to state 80


state 42

   31 DefList: Def . DefList

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    CHAR    shift, and go to state 3

    $default  reduce using rule 32 (DefList)

    Specifier  go to state 40
    DefList    go to state 81
    Def        go to state 42


state 43

   15 VarDec: VarDec . LB INTEGER RB
   20 ParamDec: Specifier VarDec .

    LB  shift, and go to state 20

    $default  reduce using rule 20 (ParamDec)


state 44

   16 FunDec: ID LP VarList RP .

    $default  reduce using rule 16 (FunDec)


state 45

   18 VarList: ParamDec COMMA . VarList

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    CHAR    shift, and go to state 3

    Specifier  go to state 24
    VarList    go to state 82
    ParamDec   go to state 26


state 46

   60 Exp: ID LP . Args RP
   61    | ID LP . RP

    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    ID       shift, and go to state 32
    MINUS    shift, and go to state 33
    STAR     shift, and go to state 34
    BAND     shift, and go to state 35
    NOT      shift, and go to state 36
    LP       shift, and go to state 37
    RP       shift, and go to state 83

    Exp   go to state 84
    Args  go to state 85


state 47

   38 Exp: Exp . ASSIGNOP Exp
   39    | Exp . AND Exp
   40    | Exp . OR Exp
   41    | Exp . EQ Exp
   42    | Exp . GE Exp
   43    | Exp . LE Exp
   44    | Exp . GT Exp
   45    | Exp . LT Exp
   46    | Exp . NE Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   51    | Exp . MOD Exp
   52    | Exp . BAND Exp
   53    | Exp . BOR Exp
   54    | Exp . BNOR Exp
   56    | MINUS Exp .
   62    | Exp . LB Exp RB

    LB  shift, and go to state 66

    $default  reduce using rule 56 (Exp)


state 48

   38 Exp: Exp . ASSIGNOP Exp
   39    | Exp . AND Exp
   40    | Exp . OR Exp
   41    | Exp . EQ Exp
   42    | Exp . GE Exp
   43    | Exp . LE Exp
   44    | Exp . GT Exp
   45    | Exp . LT Exp
   46    | Exp . NE Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   51    | Exp . MOD Exp
   52    | Exp . BAND Exp
   53    | Exp . BOR Exp
   54    | Exp . BNOR Exp
   59    | STAR Exp .
   62    | Exp . LB Exp RB

    LB  shift, and go to state 66

    $default  reduce using rule 59 (Exp)


state 49

   38 Exp: Exp . ASSIGNOP Exp
   39    | Exp . AND Exp
   40    | Exp . OR Exp
   41    | Exp . EQ Exp
   42    | Exp . GE Exp
   43    | Exp . LE Exp
   44    | Exp . GT Exp
   45    | Exp . LT Exp
   46    | Exp . NE Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   51    | Exp . MOD Exp
   52    | Exp . BAND Exp
   53    | Exp . BOR Exp
   54    | Exp . BNOR Exp
   58    | BAND Exp .
   62    | Exp . LB Exp RB

    LB  shift, and go to state 66

    $default  reduce using rule 58 (Exp)


state 50

   38 Exp: Exp . ASSIGNOP Exp
   39    | Exp . AND Exp
   40    | Exp . OR Exp
   41    | Exp . EQ Exp
   42    | Exp . GE Exp
   43    | Exp . LE Exp
   44    | Exp . GT Exp
   45    | Exp . LT Exp
   46    | Exp . NE Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   51    | Exp . MOD Exp
   52    | Exp . BAND Exp
   53    | Exp . BOR Exp
   54    | Exp . BNOR Exp
   57    | NOT Exp .
   62    | Exp . LB Exp RB

    LB  shift, and go to state 66

    $default  reduce using rule 57 (Exp)


state 51

   38 Exp: Exp . ASSIGNOP Exp
   39    | Exp . AND Exp
   40    | Exp . OR Exp
   41    | Exp . EQ Exp
   42    | Exp . GE Exp
   43    | Exp . LE Exp
   44    | Exp . GT Exp
   45    | Exp . LT Exp
   46    | Exp . NE Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   51    | Exp . MOD Exp
   52    | Exp . BAND Exp
   53    | Exp . BOR Exp
   54    | Exp . BNOR Exp
   55    | LP Exp . RP
   62    | Exp . LB Exp RB

    ASSIGNOP  shift, and go to state 52
    EQ        shift, and go to state 53
    GE        shift, and go to state 54
    LE        shift, and go to state 55
    GT        shift, and go to state 56
    LT        shift, and go to state 57
    NE        shift, and go to state 58
    PLUS      shift, and go to state 59
    MINUS     shift, and go to state 60
    STAR      shift, and go to state 61
    DIV       shift, and go to state 62
    BAND      shift, and go to state 63
    AND       shift, and go to state 64
    OR        shift, and go to state 65
    RP        shift, and go to state 86
    LB        shift, and go to state 66
    BOR       shift, and go to state 67
    BNOR      shift, and go to state 68
    MOD       shift, and go to state 69


state 52

   38 Exp: Exp ASSIGNOP . Exp

    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    ID       shift, and go to state 32
    MINUS    shift, and go to state 33
    STAR     shift, and go to state 34
    BAND     shift, and go to state 35
    NOT      shift, and go to state 36
    LP       shift, and go to state 37

    Exp  go to state 87


state 53

   41 Exp: Exp EQ . Exp

    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    ID       shift, and go to state 32
    MINUS    shift, and go to state 33
    STAR     shift, and go to state 34
    BAND     shift, and go to state 35
    NOT      shift, and go to state 36
    LP       shift, and go to state 37

    Exp  go to state 88


state 54

   42 Exp: Exp GE . Exp

    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    ID       shift, and go to state 32
    MINUS    shift, and go to state 33
    STAR     shift, and go to state 34
    BAND     shift, and go to state 35
    NOT      shift, and go to state 36
    LP       shift, and go to state 37

    Exp  go to state 89


state 55

   43 Exp: Exp LE . Exp

    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    ID       shift, and go to state 32
    MINUS    shift, and go to state 33
    STAR     shift, and go to state 34
    BAND     shift, and go to state 35
    NOT      shift, and go to state 36
    LP       shift, and go to state 37

    Exp  go to state 90


state 56

   44 Exp: Exp GT . Exp

    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    ID       shift, and go to state 32
    MINUS    shift, and go to state 33
    STAR     shift, and go to state 34
    BAND     shift, and go to state 35
    NOT      shift, and go to state 36
    LP       shift, and go to state 37

    Exp  go to state 91


state 57

   45 Exp: Exp LT . Exp

    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    ID       shift, and go to state 32
    MINUS    shift, and go to state 33
    STAR     shift, and go to state 34
    BAND     shift, and go to state 35
    NOT      shift, and go to state 36
    LP       shift, and go to state 37

    Exp  go to state 92


state 58

   46 Exp: Exp NE . Exp

    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    ID       shift, and go to state 32
    MINUS    shift, and go to state 33
    STAR     shift, and go to state 34
    BAND     shift, and go to state 35
    NOT      shift, and go to state 36
    LP       shift, and go to state 37

    Exp  go to state 93


state 59

   47 Exp: Exp PLUS . Exp
